--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,38 @@
-# Use postgres/example user/password credentials
 version: '3.9'
 
 services:
   db:
     image: postgres
     restart: always
-    # set shared memory limit when using docker-compose
     shm_size: 128mb
-    # or set shared memory limit when deploy via swarm stack
-    #volumes:
-    #  - type: tmpfs
-    #    target: /dev/shm
-    #    tmpfs:
-    #      size: 134217728 # 128*2^20 bytes = 128Mb
     environment:
       POSTGRES_PASSWORD: example
-
   adminer:
     image: adminer
     restart: always
     ports:
       - 9595:8080
   rabbitmq:
-    image: 'bitnami/rabbitmq:latest'
-    environment:
-      RABBITMQ_MANAGEMENT_ALLOW_WEB_ACCESS: true
+    image: 'rabbitmq:3.13.6-management'
     ports:
       - '15672:15672'
+      - '5672:5672'
+  stock-api:
+    build:
+      dockerfile: ./src/Stock/Stock.Api/Dockerfile
+    ports: 
+      - '8001:8080'
+  stock-consumer:
+    build:
+      dockerfile: ./src/Stock/Stock.Consumer/Dockerfile
+  order-api:
+    build:
+      dockerfile: ./src/Order/Order.Api/Dockerfile
+    ports: 
+      - '8002:8080'  
+  order-consumer:
+    build:
+      dockerfile: ./src/Order/Order.Consumer/Dockerfile
+  notification-consumer:
+    build:
+      dockerfile: ./src/Notification/Notification.Consumer/Dockerfile                          
