--- a/src/Order/Order.Api/appsettings.json
+++ b/src/Order/Order.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OrderDBConnection": "Host=localhost;Port=5432;Database=OrderDB;User Id=postgres;Password=example;"
+  }
 }
