--- a/src/Order/Order.Consumer/Order.Consumer.csproj
+++ b/src/Order/Order.Consumer/Order.Consumer.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Core\Core.csproj" />
+  </ItemGroup>
 </Project>
