--- a/src/Stock/Stock.Consumer/appsettings.json
+++ b/src/Stock/Stock.Consumer/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "StockDBConnection": "Host=localhost;Port=5432;Database=StockDB;User Id=postgres;Password=example;"
   }
 }
